<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            tools:context="me.a3zcs.habittracker.inventoryapp.activity.DetailsActivity">

            <ImageView
                android:scaleType="center"
                tools:src="@drawable/placeholder"
                android:layout_width="371dp"
                android:layout_height="176dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="0dp"
                android:id="@+id/imageView"
                android:layout_marginLeft="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginRight="0dp"
                app:layout_constraintRight_toRightOf="parent" />

            <TextView
                android:id="@+id/TextViewName"
                android:layout_width="0dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                tools:text="@string/name"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintHorizontal_bias="0.0" />

            <TextView
                android:id="@+id/TextViewPrice"
                android:layout_width="0dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="6dp"
                android:ems="10"
                tools:text="@string/price"
                android:selectAllOnFocus="false"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TextViewName"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <TextView
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:id="@+id/TextViewQuantity"
                android:layout_width="162dp"
                android:layout_height="42dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:ems="10"
                android:gravity="center"
                tools:text="@string/quantity"
                app:layout_constraintBaseline_toBaselineOf="@+id/buttonAdd"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:id="@+id/ButtonSupplier"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                tools:text="@string/supplier"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonAdd"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/add"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/guideline"
                app:layout_constraintRight_toLeftOf="@+id/TextViewQuantity"
                app:layout_constraintTop_toBottomOf="@+id/TextViewPrice" />

            <Button
                android:id="@+id/buttonSubtract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtract"
                app:layout_constraintBaseline_toBaselineOf="@+id/TextViewQuantity"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintLeft_toRightOf="@+id/TextViewQuantity"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="8dp"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="8dp" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="376dp"
                tools:layout_editor_absoluteY="81dp"
                tools:layout_editor_absoluteX="376dp" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</layout>